--- a/app/app-1.html
+++ b/app/app-1.html
@@ -1,10 +1,10 @@
-<div id="app-1" class="radio-choices" data-title="Veuillez sélectionner votre service désiré" data-description="" data-button_left="" data-button_left_type="button-display-none" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="0">
+<div id="app-1" class="radio-choices" data-title="Veuillez sélectionner votre service désiré" data-description="" data-button_left="" data-button_left_type="button-display-none" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="0" data-evident_next_page="18">
     <ul class="choices-box">
-        <li class="choice radio-choice" data-order="1" data-go_to="8" onclick="update_app(this)">
+        <li class="choice radio-choice" data-order="1" data-go_to="2" onclick="update_app(this)">
             <span class="choice-image" data-image_src="chauffage"></span>
             <span class="choice-caption text-clickable">Installation des pompes à chaleur</span>
         </li>
-        <li class="choice radio-choice" data-order="2" data-go_to="2" onclick="update_app(this)">
+        <li class="choice radio-choice" data-order="2" data-go_to="7" onclick="update_app(this)">
             <span class="choice-image" data-image_src="isolation"></span>
             <span class="choice-caption text-clickable">Isolation thermique des maisons</span>
         </li>
