--- a/app/app-17.html
+++ b/app/app-17.html
@@ -1,4 +1,4 @@
-<div id="app-17" class="input-drop-down-choice" data-title="Veuillez préciser le montant approximatif de votre facture d'électricité" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="40">
+<div id="app-17" class="input-drop-down-choice" data-title="Veuillez préciser le montant approximatif de votre facture d'électricité" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="40" data-evident_next_page="">
     <ul class="choices-box">
         <form class="input-drop-down-form" id="facture-form" action="" >
             <div class="input-box input-drop-down-box">
