--- a/app/app-9.html
+++ b/app/app-9.html
@@ -1,28 +1,12 @@
-<div id="app-9" class="radio-choices" data-title="Quel est le type d'énergie de votre chauffage?" data-description="Si vous en avez plusieurs, veuillez sélectionner le type principal" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="13">
+<div id="app-9" class="radio-choices" data-title="Quel est le type de votre comble?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="20" data-evident_next_page="">
     <ul class="choices-box">
-        <li class="choice radio-choice" data-order="1" data-go_to="10" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="fioul"></span>
-            <span class="choice-caption text-clickable">Fioul</span>
+        <li class="choice radio-choice" data-order="1" data-go_to="" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="comble-perdu"></span>
+            <span class="choice-caption text-clickable">Comble perdu</span>
         </li>
-        <li class="choice radio-choice" data-order="2" data-go_to="11" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="gaz"></span>
-            <span class="choice-caption text-clickable">Gaz</span>
-        </li>
-        <li class="choice radio-choice" data-order="3" data-go_to="12" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="electricite"></span>
-            <span class="choice-caption text-clickable">Electricité</span>
-        </li>
-        <li class="choice radio-choice" data-order="4" data-go_to="" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="bois"></span>
-            <span class="choice-caption text-clickable">Bois</span>
-        </li>
-        <li class="choice radio-choice" data-order="5" data-go_to="" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="pac"></span>
-            <span class="choice-caption text-clickable">Pompe à chaleur</span>
-        </li>
-        <li class="choice radio-choice" data-order="6" data-go_to="" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="charbon"></span>
-            <span class="choice-caption text-clickable">Charbon</span>
+        <li class="choice radio-choice" data-order="2" data-go_to="" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="comble-amenage"></span>
+            <span class="choice-caption text-clickable">Comble aménagé</span>
         </li>
     </ul>
 </div>
