--- a/app/app-15.html
+++ b/app/app-15.html
@@ -1,4 +1,4 @@
-<div id="app-15" class="radio-choices" data-title="Veuillez sélectionner le type  de votre toit" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="26">
+<div id="app-15" class="radio-choices" data-title="Veuillez sélectionner le type  de votre toit" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="26" data-evident_next_page="16">
     <ul class="choices-box">
         <li class="choice radio-choice" data-order="1" data-go_to="" onclick="update_app(this)">
             <span class="choice-image" data-image_src="ardoise"></span>
