--- a/app/app-19.html
+++ b/app/app-19.html
@@ -1,4 +1,4 @@
-<div id="app-19" class="radio-choices" data-title="Dans ce logement, vous êtes:" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="0">
+<div id="app-19" class="radio-choices" data-title="Dans ce logement, vous êtes:" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="0" data-evident_next_page="20">
     <ul class="choices-box">
         <li class="choice radio-choice" data-order="1" data-go_to="" onclick="update_app(this)">
             <span class="choice-image" data-image_src="proprietaire"></span>
