--- a/app/app-23.html
+++ b/app/app-23.html
@@ -1,7 +1,6 @@
-<div id="app-23" class="input-increment-choice" data-title="Veuillez préciser combien vous avez d'enfants en garde alternée" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="0">
+<div id="app-23" class="input-increment-choice" data-title="Veuillez préciser combien vous avez d'enfants en garde alternée" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="0" data-evident_next_page="24">
     <ul class="choices-box">
         <form class="input-increment-form" id="enfants-garde-form" action="">
-
             <div class="input-box input-increment-box">
                 <label id="enfants-garde-input-label" for="enfants-garde-input" class="text-label input-label">Nombre d'enfants</label>
                 <div class="input-increment-container">
