--- a/app/app-24.html
+++ b/app/app-24.html
@@ -1,7 +1,6 @@
-<div id="app-24" class="input-increment-choice" data-title="Veuillez preciser le nombre de personnes composant votre foyer, vous inclus" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="0">
+<div id="app-24" class="input-increment-choice" data-title="Veuillez preciser le nombre de personnes composant votre foyer, vous inclus" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="0" data-evident_next_page="25">
     <ul class="choices-box">
         <form class="input-increment-form" id="personnes-foyer-form" action="">
-
             <div class="input-box input-increment-box">
                 <label id="personnes-foyer-input-label" for="personnes-foyer-input" class="text-label input-label">Nombre de personnes</label>
                 <div class="input-increment-container">
