--- a/app/app-26.html
+++ b/app/app-26.html
@@ -1,4 +1,4 @@
-<div id="app-26" class="input-drop-down-choice" data-title="Veuillez choisir votre code postal" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="0">
+<div id="app-26" class="input-drop-down-choice" data-title="Veuillez choisir votre code postal" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="0" data-evident_next_page="">
     <ul class="choices-box">
         <form class="input-drop-down-form" id="code-postal-form" action="" >
             <div class="input-box input-drop-down-box">
