--- a/app/app-4.html
+++ b/app/app-4.html
@@ -1,16 +1,16 @@
-<div id="app-4" class="multiple-choices" data-title="Quelle(s) zone(s) souhaitez vous isoler?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="13">
+<div id="app-4" class="multiple-choices" data-title="Quel(s) équipement(s) de chauffage vous utilisez?" data-description="Vous pouvez sélectionner plusieurs choix" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="20" data-evident_next_page="">
     <ul class="choices-box">
         <li class="choice multiple-choice" data-order="1" data-go_to="" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="plafond-appartement"></span>
-            <span class="choice-caption text-clickable">Plafond</span>
+            <span class="choice-image" data-image_src="chaudiere-fioul"></span>
+            <span class="choice-caption text-clickable">Chaudière</span>
         </li>
         <li class="choice multiple-choice" data-order="2" data-go_to="" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="murs-appartement"></span>
-            <span class="choice-caption text-clickable">Murs</span>
+            <span class="choice-image" data-image_src="radiateur-fioul"></span>
+            <span class="choice-caption text-clickable">Radiateur</span>
         </li>
         <li class="choice multiple-choice" data-order="3" data-go_to="" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="plancher-appartement"></span>
-            <span class="choice-caption text-clickable">Plancher</span>
+            <span class="choice-image" data-image_src="poele-fioul"></span>
+            <span class="choice-caption text-clickable">Poêle</span>
         </li>
     </ul>
 </div>
