--- a/app/app-6.html
+++ b/app/app-6.html
@@ -1,12 +1,16 @@
-<div id="app-6" class="radio-choices" data-title="Quel est le type de votre comble?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="20">
+<div id="app-6" class="multiple-choices" data-title="Quel(s) équipement(s) de chauffage vous utilisez?" data-description="Vous pouvez sélectionner plusieurs choix" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="20" data-evident_next_page="">
     <ul class="choices-box">
-        <li class="choice radio-choice" data-order="1" data-go_to="" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="comble-perdu"></span>
-            <span class="choice-caption text-clickable">Comble perdu</span>
+        <li class="choice multiple-choice" data-order="1" data-go_to="" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="chaudiere-electricite"></span>
+            <span class="choice-caption text-clickable">Chaudière</span>
         </li>
-        <li class="choice radio-choice" data-order="2" data-go_to="" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="comble-amenage"></span>
-            <span class="choice-caption text-clickable">Comble aménagé</span>
+        <li class="choice multiple-choice" data-order="2" data-go_to="" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="radiateur-electricite"></span>
+            <span class="choice-caption text-clickable">Radiateur</span>
+        </li>
+        <li class="choice multiple-choice" data-order="3" data-go_to="" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="ppc-electricite"></span>
+            <span class="choice-caption text-clickable">Plafond et (ou) Plancher Chauffant</span>
         </li>
     </ul>
 </div>
