--- a/app/app-7.html
+++ b/app/app-7.html
@@ -1,11 +1,12 @@
-<div id="app-7" class="input-number-choice" data-title="Veuillez préciser la surface de la zone à isoler" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="26">
+<div id="app-7" class="radio-choices" data-title="Veuillez sélectionner le type de votre logement" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="7" data-evident_next_page="12">
     <ul class="choices-box">
-        <form class="input-number-form" id="surface-zone-form" action="">
-            <div class="input-box input-number-box">
-                <label id="surface-zone-input-label" for="surface-zone-input" class="text-label input-label">Surface de zone (en m²)</label>
-                <input type="number" name="surface-zone-input" id="surface-zone-input" class="text-input input input-number" placeholder="Entrer la surface de zone" step="10" min="0" oninput="input_validation(this)">
-                <p id="surface-zone-input-hint" class="text-input-hint input-hint">Entrer un nombre entier positif non nul.</p>
-            </div>
-        </form>
+        <li class="choice radio-choice" data-order="1" data-go_to="8" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="maison"></span>
+            <span class="choice-caption text-clickable">Maison</span>
+        </li>
+        <li class="choice radio-choice" data-order="2" data-go_to="11" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="appartement"></span>
+            <span class="choice-caption text-clickable">Appartement</span>
+        </li>
     </ul>
 </div>
