--- a/app/app-8.html
+++ b/app/app-8.html
@@ -1,12 +1,20 @@
-<div id="app-8" class="radio-choices" data-title="Veuillez sélectionner le type de votre logement" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="7">
+<div id="app-8" class="multiple-choices" data-title="Quelle(s) zone(s) souhaitez vous isoler?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="13" data-evident_next_page="">
     <ul class="choices-box">
-        <li class="choice radio-choice" data-order="1" data-go_to="" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="maison"></span>
-            <span class="choice-caption text-clickable">Maison</span>
+        <li class="choice multiple-choice" data-order="1" data-go_to="9" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="comble"></span>
+            <span class="choice-caption text-clickable">Comble</span>
         </li>
-        <li class="choice radio-choice" data-order="2" data-go_to="" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="appartement"></span>
-            <span class="choice-caption text-clickable">Appartement</span>
+        <li class="choice multiple-choice" data-order="2" data-go_to="" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="plafond-maison"></span>
+            <span class="choice-caption text-clickable">Plafond</span>
+        </li>
+        <li class="choice multiple-choice" data-order="3" data-go_to="" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="murs-maison"></span>
+            <span class="choice-caption text-clickable">Murs</span>
+        </li>
+        <li class="choice multiple-choice" data-order="4" data-go_to="10" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="plancher-maison"></span>
+            <span class="choice-caption text-clickable">Plancher</span>
         </li>
     </ul>
 </div>
