--- a/app/app-21.html
+++ b/app/app-21.html
@@ -1,20 +1,12 @@
-<div id="app-21" class="radio-choices" data-title="Veuillez préciser votre état matrimonial" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="" data-evident_next_page="23">
+<div id="app-21" class="radio-choices" data-title="Veuillez sélectionner la durée de votre logement" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="0" data-evident_next_page="22">
     <ul class="choices-box">
-        <li class="choice radio-choice" data-order="1" data-go_to="22" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="marie"></span>
-            <span class="choice-caption text-clickable">Marié(e)</span>
+        <li class="choice radio-choice" data-order="1" data-go_to="" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="+2ans"></span>
+            <span class="choice-caption text-clickable">Plus de 2 ans</span>
         </li>
-        <li class="choice radio-choice" data-order="2" data-go_to="22" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="pacse"></span>
-            <span class="choice-caption text-clickable">Pacsé(e)</span>
-        </li>
-        <li class="choice radio-choice" data-order="3" data-go_to="22" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="concubinage"></span>
-            <span class="choice-caption text-clickable">En concubinage</span>
-        </li>
-        <li class="choice radio-choice" data-order="4" data-go_to="" onclick="update_app(this)">
-            <span class="choice-image" data-image_src="celibataire"></span>
-            <span class="choice-caption text-clickable">Célibataire</span>
+        <li class="choice radio-choice" data-order="2" data-go_to="" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="-2ans"></span>
+            <span class="choice-caption text-clickable">Moins de 2 ans</span>
         </li>
     </ul>
 </div>
