--- a/app/app-16.html
+++ b/app/app-16.html
@@ -1,15 +1,20 @@
-<div id="app-16" class="input-drop-down-choice" data-title="Veuillez selectionner la surface que vous estimez disponible sur votre toit" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="33" data-evident_next_page="17">
+<div id="app-16" class="radio-choices" data-title="Veuillez sélectionner le type  de votre toit" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="26" data-evident_next_page="17">
     <ul class="choices-box">
-        <form class="input-drop-down-form" id="surface-toit-form" action="" >
-            <div class="input-drop-down-box input-box">
-                <label id="surface-toit-input-label" for="surface-toit-input" class="text-label input-label">Surface Disponible</label>
-                <select name="surface-toit-input" id="surface-toit-input" class="text-clickable input input-drop-down" >
-                        <option class="input-drop-down-choice text-clickable" value="1">&nbsp;&nbsp;15m²</option>
-                        <option class="input-drop-down-choice text-clickable" value="2">&nbsp;&nbsp;20m²</option>
-                        <option class="input-drop-down-choice text-clickable" value="3">&nbsp;&nbsp;30m²</option>
-                        <option class="input-drop-down-choice text-clickable" value="4">&nbsp;&nbsp;40m²</option>
-                </select>
-            </div>
-        </form>
+        <li class="choice radio-choice" data-order="1" data-go_to="" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="ardoise"></span>
+            <span class="choice-caption text-clickable">Ardoise</span>
+        </li>
+        <li class="choice radio-choice" data-order="2" data-go_to="" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="acier"></span>
+            <span class="choice-caption text-clickable">Acier</span>
+        </li>
+        <li class="choice radio-choice" data-order="3" data-go_to="" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="tuile"></span>
+            <span class="choice-caption text-clickable">Tuile</span>
+        </li>
+        <li class="choice radio-choice" data-order="4" data-go_to="" onclick="update_app(this)">
+            <span class="choice-image" data-image_src="autre"></span>
+            <span class="choice-caption text-clickable">Autre</span>
+        </li>
     </ul>
 </div>
