accessibility, border width, increment storage

--- a/app/app-14.html
+++ b/app/app-14.html
@@ -1,26 +1,26 @@
 <div id="app-14" class="radio-choices" data-title="Quelle est l'orientation de votre toit?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="13" data-evident_next_page="15">
     <ul class="choices-box">
-        <li class="choice radio-choice" data-order="1" data-go_to="" onclick="update_app(this)">
+        <li class="choice radio-choice" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="sud"></span>
             <span class="choice-caption text-clickable">Sud</span>
         </li>
-        <li class="choice radio-choice" data-order="2" data-go_to="" onclick="update_app(this)">
+        <li class="choice radio-choice" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="sud-ouest"></span>
             <span class="choice-caption text-clickable">Sud-ouest</span>
         </li>
-        <li class="choice radio-choice" data-order="3" data-go_to="" onclick="update_app(this)">
+        <li class="choice radio-choice" data-order="3" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="sud-est"></span>
             <span class="choice-caption text-clickable">Sud-est</span>
         </li>
-        <li class="choice radio-choice" data-order="4" data-go_to="" onclick="update_app(this)">
+        <li class="choice radio-choice" data-order="4" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="ouest"></span>
             <span class="choice-caption text-clickable">Ouest</span>
         </li>
-        <li class="choice radio-choice" data-order="5" data-go_to="" onclick="update_app(this)">
+        <li class="choice radio-choice" data-order="5" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="est"></span>
             <span class="choice-caption text-clickable">Est</span>
         </li>
-        <li class="choice radio-choice" data-order="6" data-go_to="" onclick="update_app(this)">
+        <li class="choice radio-choice" data-order="6" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="autre"></span>
             <span class="choice-caption text-clickable">Autre</span>
         </li>
