--- a/app/app-5.html
+++ b/app/app-5.html
@@ -1,14 +1,14 @@
 <div id="app-5" class="multiple-choices" data-title="Quel(s) équipement(s) de chauffage vous utilisez?" data-description="Vous pouvez sélectionner plusieurs choix" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="20" data-evident_next_page="">
     <ul class="choices-box">
-        <li class="choice multiple-choice" data-order="1" data-go_to="" onclick="update_app(this)">
+        <li class="choice multiple-choice" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="chaudiere-gaz"></span>
             <span class="choice-caption text-clickable">Chaudière</span>
         </li>
-        <li class="choice multiple-choice" data-order="2" data-go_to="" onclick="update_app(this)">
+        <li class="choice multiple-choice" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="radiateur-gaz"></span>
             <span class="choice-caption text-clickable">Radiateur</span>
         </li>
-        <li class="choice multiple-choice" data-order="3" data-go_to="" onclick="update_app(this)">
+        <li class="choice multiple-choice" data-order="3" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="poele-gaz"></span>
             <span class="choice-caption text-clickable">Poêle</span>
         </li>
