--- a/app/app-10.html
+++ b/app/app-10.html
@@ -1,14 +1,14 @@
 <div id="app-10" class="radio-choices" data-title="Quel est le type de votre sous-sol?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="20" data-evident_next_page="">
     <ul class="choices-box">
-        <li class="choice radio-choice" data-order="1" data-go_to="" onclick="update_app(this)">
+        <li class="choice radio-choice" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="terre-plein"></span>
             <span class="choice-caption text-clickable">Terre-plein</span>
         </li>
-        <li class="choice radio-choice" data-order="2" data-go_to="" onclick="update_app(this)">
+        <li class="choice radio-choice" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="vide-sanitaire"></span>
             <span class="choice-caption text-clickable">Vide sanitaire</span>
         </li>
-        <li class="choice radio-choice" data-order="3" data-go_to="" onclick="update_app(this)">
+        <li class="choice radio-choice" data-order="3" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="cave"></span>
             <span class="choice-caption text-clickable">Cave</span>
         </li>
