--- a/app/app-11.html
+++ b/app/app-11.html
@@ -1,14 +1,14 @@
 <div id="app-11" class="multiple-choices" data-title="Quelle(s) zone(s) souhaitez vous isoler?" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="13"  data-evident_next_page="">
     <ul class="choices-box">
-        <li class="choice multiple-choice" data-order="1" data-go_to="" onclick="update_app(this)">
+        <li class="choice multiple-choice" data-order="1" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="plafond-appartement"></span>
             <span class="choice-caption text-clickable">Plafond</span>
         </li>
-        <li class="choice multiple-choice" data-order="2" data-go_to="" onclick="update_app(this)">
+        <li class="choice multiple-choice" data-order="2" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="murs-appartement"></span>
             <span class="choice-caption text-clickable">Murs</span>
         </li>
-        <li class="choice multiple-choice" data-order="3" data-go_to="" onclick="update_app(this)">
+        <li class="choice multiple-choice" data-order="3" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="plancher-appartement"></span>
             <span class="choice-caption text-clickable">Plancher</span>
         </li>
