--- a/app/app-22.html
+++ b/app/app-22.html
@@ -1,18 +1,18 @@
 <div id="app-22" class="radio-choices" data-title="Veuillez préciser votre état matrimonial" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="" data-evident_next_page="24">
     <ul class="choices-box">
-        <li class="choice radio-choice" data-order="1" data-go_to="23" onclick="update_app(this)">
+        <li class="choice radio-choice" data-order="1" data-go_to="23" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="marie"></span>
             <span class="choice-caption text-clickable">Marié(e)</span>
         </li>
-        <li class="choice radio-choice" data-order="2" data-go_to="23" onclick="update_app(this)">
+        <li class="choice radio-choice" data-order="2" data-go_to="23" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="pacse"></span>
             <span class="choice-caption text-clickable">Pacsé(e)</span>
         </li>
-        <li class="choice radio-choice" data-order="3" data-go_to="23" onclick="update_app(this)">
+        <li class="choice radio-choice" data-order="3" data-go_to="23" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="concubinage"></span>
             <span class="choice-caption text-clickable">En concubinage</span>
         </li>
-        <li class="choice radio-choice" data-order="4" data-go_to="" onclick="update_app(this)">
+        <li class="choice radio-choice" data-order="4" data-go_to="" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="celibataire"></span>
             <span class="choice-caption text-clickable">Célibataire</span>
         </li>
