right & left button functionality

--- a/app/app-17.html
+++ b/app/app-17.html
@@ -1,4 +1,4 @@
-<div id="app-17" class="input-drop-down-choice" data-title="Veuillez selectionner la surface que vous estimez disponible sur votre toit" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="33" data-evident_next_page="18">
+<div id="app-17" class="input-choice input-drop-down-choice" data-title="Veuillez selectionner la surface que vous estimez disponible sur votre toit" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="71" data-evident_next_page="18">
     <ul class="choices-box">
         <form class="input-drop-down-form" id="surface-toit-form" action="" >
             <div class="input-drop-down-box input-box">
