--- a/app/app-26.html
+++ b/app/app-26.html
@@ -1,4 +1,4 @@
-<div id="app-26" class="input-drop-down-choice" data-title="Veuillez sélectionner la tranche où se situent vos revenus fiscaux" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="0" data-evident_next_page="27">
+<div id="app-26" class="input-choice input-drop-down-choice" data-title="Veuillez sélectionner la tranche où se situent vos revenus fiscaux" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="71" data-evident_next_page="27">
     <ul class="choices-box">
         <form class="input-drop-down-form" id="revenues-form" action="" >
             <div class="input-box input-drop-down-box">
