--- a/app/app-12.html
+++ b/app/app-12.html
@@ -1,4 +1,4 @@
-<div id="app-12" class="input-number-choice" data-title="Veuillez préciser la surface de la zone à isoler" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="26" data-evident_next_page="">
+<div id="app-12" class="input-choice input-number-choice" data-title="Veuillez préciser la surface de la zone à isoler" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="confirmer" data-button_right_type="button-primary-special-private" data-progress="75" data-evident_next_page="">
     <ul class="choices-box">
         <form class="input-number-form" id="surface-zone-form" action="">
             <div class="input-box input-number-box">
