--- a/app/app-22.html
+++ b/app/app-22.html
@@ -1,4 +1,4 @@
-<div id="app-22" class="radio-choices" data-title="Veuillez préciser votre état matrimonial" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="" data-evident_next_page="24">
+<div id="app-22" class="radio-choices" data-title="Veuillez préciser votre état matrimonial" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="28" data-evident_next_page="24">
     <ul class="choices-box">
         <li class="choice radio-choice" data-order="1" data-go_to="23" tabindex="0" onkeypress="update_app(this)" onclick="update_app(this)">
             <span class="choice-image" data-image_src="marie"></span>
