--- a/app/app-24.html
+++ b/app/app-24.html
@@ -1,4 +1,4 @@
-<div id="app-24" class="input-increment-choice" data-title="Veuillez préciser combien vous avez d'enfants en garde alternée" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="0" data-evident_next_page="25">
+<div id="app-24" class="input-choice input-increment-choice" data-title="Veuillez préciser combien vous avez d'enfants en garde alternée" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="42" data-evident_next_page="25">
     <ul class="choices-box">
         <form class="input-increment-form" id="enfants-garde-form" action="">
             <div class="input-box input-increment-box">
