--- a/app/app-25.html
+++ b/app/app-25.html
@@ -1,4 +1,4 @@
-<div id="app-25" class="input-increment-choice" data-title="Veuillez preciser le nombre de personnes composant votre foyer, vous inclus" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="0" data-evident_next_page="26">
+<div id="app-25" class="input-choice input-increment-choice" data-title="Veuillez preciser le nombre de personnes composant votre foyer, vous inclus" data-description="" data-button_left="retour" data-button_left_type="button-secondary-special" data-button_right="suivant" data-button_right_type="button-primary-normal-private" data-progress="57" data-evident_next_page="26">
     <ul class="choices-box">
         <form class="input-increment-form" id="personnes-foyer-form" action="">
             <div class="input-box input-increment-box">
