--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
 <header id="page-heading" class="page-section" tabindex="0">
     <div id="content-box-heading" class="content-box-page-section">
         <h1 id="heading-title" class="text-page-title">Rénover votre maison<br/>sans vous inquiêter du coût</h1>
-        <p id="heading-body" class="text-title-body">Mêco aide la famille française le long de son parcours vers la transition énergitique.</p>
+        <p id="heading-body" class="text-title-body">Meeco aide la famille française le long de son parcours vers la transition énergitique.</p>
         <a id="cta-heading-link" class="text-button button button-primary-special-private" href="app/index.html"  target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
     </div>
 </header>
 <section id="values-intro-section" class="page-section" tabindex="0">
     <div id="content-box-values-intro" class="content-box-page-section">
-        <h2 id="values-intro-title" class="text-big-header section-title">Vivez dans la maison que vous méritez avec Mêco.</h2>
+        <h2 id="values-intro-title" class="text-big-header section-title">Vivez dans la maison que vous méritez avec Meeco.</h2>
     </div>
 </section>
 <section id="values-section" class="page-section" tabindex="0">
@@ -224,7 +224,7 @@
 </section>
 <footer id="page-footer" class="page-section" tabindex="0">
     <div id="content-box-footer" class="content-box-page-section">
-        <img id="logo-footer" src="images/logo/meeco-white.svg" alt="logo mêco blanc"/>
+        <img id="logo-footer" src="images/logo/meeco-white.svg" alt="logo Meeco blanc"/>
         <ul id="footer-list">
             <li><a href="#" class="important-link text-footer" area-label="Mentions légales" tabindex="0">Mentions légales</a></li>
             <li><a href="#" class="important-link text-footer" area-label="Politique de la vie privée" tabindex="0">Politique de la vie privée</a></li>
