--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/input.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/index-main.css">
+    <link rel="stylesheet" href="css/index-main(1000).css">
 </head>
 <body onscroll="scrollfunction();" id="page">
 <nav id="navigation-bar" class="navigation-bar">
