home page content changes

--- a/index.html
+++ b/index.html
@@ -87,57 +87,58 @@
 </nav>
 <header id="page-heading" class="page-section" tabindex="0">
     <div id="content-box-heading" class="content-box-page-section">
-        <h1 id="heading-title" class="text-page-title">Rénover votre maison<br/>sans vous inquiêter du coût</h1>
-        <p id="heading-body" class="text-title-body">Meeco aide la famille française le long de son parcours vers la transition énergitique.</p>
+        <h1 id="heading-title" class="text-page-title">LA RÉNOVATION ÉNERGÉTIQUE DE VOTRE FOYER<br/>N'A JAMAIS ÉTÉ AUSSI SIMPLE.</h1>
+        <p id="heading-body" class="text-title-body">Jusqu'à 100 % de vos travaux financés grâce à MEECO.</p>
         <a id="cta-heading-link" class="text-button button button-primary-special-private" href="app/index.html"  target="_blank" aria-label="Réaliser mon projet" tabindex="0">Réaliser mon projet</a>
     </div>
 </header>
 <section id="values-intro-section" class="page-section" tabindex="0">
     <div id="content-box-values-intro" class="content-box-page-section">
-        <h2 id="values-intro-title" class="text-big-header section-title">Vivez dans la maison que vous méritez avec Meeco.</h2>
+        <h2 id="values-intro-title" class="text-big-header section-title">Effectuer vos travaux d'économies d'énergie en toute simplicité par les meilleurs artisans proches de chez vous.</h2>
     </div>
 </section>
 <section id="values-section" class="page-section" tabindex="0">
     <div id="content-box-values" class="content-box-page-section">
         <ul id="values-list">
+            
             <li class="values-list-item">
                 <img src="images/visuals/economie-illustration.svg" alt="économie-illustration"/>
-                <h3 class="values-list-item-title text-small-header">Economisez votre consommation d'énergie</h3>
-                <p class="values-list-item-description text-small-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
+                <h3 class="values-list-item-title text-small-header">Maîtriser, pour réduire sa consommation énergétique :</h3>
+                <p class="values-list-item-description text-small-body">Moins gâchée pour moins dépenser, avec la mise en place d’actions concrètes qui vont vous aider à maîtriser et réduire votre consommation d’énergie.</p>
             </li>
             <li class="values-list-item">
                 <img src="images/visuals/ecologie-illustration.svg" alt="écologie-illustration"/>
-                <h3 class="values-list-item-title text-small-header">Habitez dans un milieu plus écologique</h3>
-                <p class="values-list-item-description text-small-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
+                <h3 class="values-list-item-title text-small-header">Une habitation écologique est toujours économique</h3>
+                <p class="values-list-item-description text-small-body">En gardant votre confort, votre habitation devient beaucoup moins énergivore et votre empreinte écologique diminue avec zéro pollution.</p>
             </li>
             <li class="values-list-item">
                 <img src="images/visuals/confort-illustration.svg" alt="confort-illustration"/>
-                <h3 class="values-list-item-title text-small-header">Assurez une vie pleine de confort dans votre maison</h3>
-                <p class="values-list-item-description text-small-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
+                <h3 class="values-list-item-title text-small-header">Assurez-vous une vie pleine de confort dans votre maison</h3>
+                <p class="values-list-item-description text-small-body">Améliorer le confort thermique de votre logement en bénéficiant d’une température agréable hiver comme été.</p>
             </li>
         </ul>
     </div>
 </section>
 <section id="services-section" class="page-section" tabindex="0">
     <div id="content-box-services" class="content-box-page-section">
-        <h2 id="services-section-title" class="text-big-header section-title">Nous vous proposons des travaux de renovation énergetique de qualité.</h2>
+        <h2 id="services-section-title" class="text-big-header section-title">Vérifier votre éligibilité aux aides de l'État, pour une solution écologique adaptée à votre logement </h2>
         <ul id="services-section-list">
             <li class="services-section-list-item">
                 <img src="images/visuals/isolation-illustration.svg" alt="isolation-illustration"/>
-                <h3 class="services-section-list-item-title text-small-header">Isolation thermique</h3>
-                <p class="services-section-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
+                <h3 class="services-section-list-item-title text-small-header">ISOLER MON LOGEMENT </h3>
+                <p class="services-section-list-item-description text-small-body">Je veux isoler ma maison et réduire les pertes de chaleur. </p>
                 <a href="#" class="services-section-list-item-link text-clickable button button-secondary-normal aria-label="En savoir plus" tabindex="0";>En savoir plus</a>
             </li>
             <li class="services-section-list-item">
                 <img src="images/visuals/chauffage-illustration.svg" alt="chauffage-illustration"/>
-                <h3 class="services-section-list-item-title text-small-header">Chauffage</h3>
+                <h3 class="services-section-list-item-title text-small-header">CHANGER MON CHAUFFAGE</h3>
                 <p class="services-section-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
                 <a href="#" class="services-section-list-item-link text-clickable button button-secondary-normal" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
             </li>
             <li class="services-section-list-item">
                 <img src="images/visuals/electricite-illustration.svg" alt="énergie-illustration"/>
-                <h3 class="services-section-list-item-title text-small-header">Energie solaire</h3>
-                <p class="services-section-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
+                <h3 class="services-section-list-item-title text-small-header">PRODUIRE MA PROPRE ÉNERGIE</h3>
+                <p class="services-section-list-item-description text-small-body">Je veux produire ma propre énergie avec des panneaux solaires.</p>
                 <a href="#" class="services-section-list-item-link text-clickable button button-secondary-normal" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
             </li>
         </ul>
@@ -145,7 +146,7 @@
 </section>
 <section id="faq-section" class="page-section" tabindex="0">
     <div id="content-box-faq" class="content-box-page-section">
-        <h2 id="faq-title" class="text-big-header section-title">Avez vous des questions?<br/>Ne cherchez pas dehors!</h2>
+        <h2 id="faq-title" class="text-big-header section-title">Avez vous des questions?<br/>Ne cherchez plus, nos experts sont là pour répondre à toutes vos questions. Meeco vous accompagne dans votre projet.</h2>
         <div id="faq-box">
             <ul id="faq-questions-list">
                 <li id="faq-question-1" class="text-clickable faq-question faq-question-active" aria-label="Question 1" onclick="show_answer(1)" onkeydown="show_answer(1)" tabindex="0">Comment se font les travaux d'installation des pompes à chaleur?<span class="faq-question-arrow"></span></li>
@@ -210,8 +211,8 @@
 </section>
 <section id="newsletter-section" class="page-section" tabindex="0">
     <div id="content-box-newsletter" class="content-box-page-section">
-        <h2 id="newsletter-title" class="text-small-header section-title">Restez toujours au courant des nouveautés de renovation.</h2>
-        <p id="newsletter-description" class="text-small-body">Inscrivez vous à notre Newsletter et serez le premier à recevoir toutes nos actualiés et toute nouveauté de renovation énergetique.</p>
+        <h2 id="newsletter-title" class="text-small-header section-title">Restez informé des nouveautés Meeco </h2>
+        <p id="newsletter-description" class="text-small-body">Inscrivez-vous à notre Newsletter et soyez le premier informé de toutes nos actualités et nouveautés.</p>
         <form class="input-email-form" id="newsletter-form" action="">
             <div id="email-input-box" class="input-box">
                 <label id="newsletter-email-input-label" for="newsletter-email-input" class="text-label input-label">Email</label>
